--- a/app/views/user_mailer/user_password_changed.text.erb
+++ b/app/views/user_mailer/user_password_changed.text.erb
@@ -1,6 +1,6 @@
 Welcome to Books That Grow
 
-Hello, <%= @username %>  
+Dear <%= @username %>,  
 Your account password has been changes by: <%= @logged_in_user%>
 
 Your email address is: <%= @new_email%>
