--- a/app/views/user_mailer/user_email_changed.html.erb
+++ b/app/views/user_mailer/user_email_changed.html.erb
@@ -16,25 +16,22 @@
         </tr>
         <tr class="episode">
           <td valign="top" colspan="2" style="padding:20px">
-            <h2 style=" margin-top:0; margin-bottom:8px; font-size:18px; color:#1caf9a">Forgot password for Books That Grow.</h2>
+            <h2 style=" margin-top:0; margin-bottom:8px; font-size:18px; color:#1caf9a">Your Books That Grow account email has been updated.</h2>
             <p style="margin:15px 0; font-size:13px">
-              Dear <%= @name %>,
-            </p>
-            <p style="margin:15px 0; font-size:13px">
-              <p style="margin:0 0; font-size:13px">
-                Username: <%= @username %>
-              </p>
-              <p style="margin:0 0; font-size:13px">
-                Email Address: <%= @email %>
-              </p>
+              Dear <%= @name %>, 
             </p>
             <p style="margin:0 0; font-size:13px">
-			 To reset password click on following
-			 link: <a href = '<%= @link %>'>reset password</a>
+              An administrator has updated your Books That Grow account. 
             </p>
-			<p style="margin:0 0; font-size:13px">
-			  To login to the site, just follow this link: <%= @url %>
-			</p>	
+            <p style="margin:15px 0; font-size:13px">
+              Your new email address is: <%= @new_email%>
+            </p>
+            <p style="margin:0 0; font-size:13px">
+              To reset your password, click on the following link: <a href = '<%= @reset_pass_url %>'>reset password</a>
+            </p>
+            <p style="margin:0 0; font-size:13px">
+              If you believe this update was made in error, please immediately contact your school administrator.
+            </p>
             <p style="margin:15px 0 0; font-size:13px">
               Thanks,
             </p>
@@ -56,5 +53,4 @@
   </table>
 </body>
 </html>
-
 
