--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -10,15 +10,24 @@
       <table width="650" id="main" border="0" cellpadding="0" cellspacing="0">
         <tr style="background:#1d2939;">
           <td width="30" id="header" style="padding:20px;">
-            <a href="javscript:void(0);" ><img src="logo.png" width="30" height="31" alt="Books That Grow"></a>
+            <a href="javscript:void(0);" >
+				<img src="logo.png" width="30" height="31" alt="Books That Grow">
+				
+			</a>
           </td>
           <td width="620" style="font-size:24px; font-weight:bold; text-transform:uppercase; padding:20px; text-align:left; color:#fff">Books That Grow</td>
         </tr>
         <tr class="episode">
           <td valign="top" colspan="2" style="padding:20px">
-            <h2 style=" margin-top:0; margin-bottom:8px; font-size:18px; color:#1caf9a">Forgot password for Books That Grow.</h2>
+            <h2 style=" margin-top:0; margin-bottom:8px; font-size:18px; color:#1caf9a">Welcome to Books That Grow!</h2>
             <p style="margin:15px 0; font-size:13px">
-              Dear <%= @name %>,
+              Dear <%= @firstname %>,
+            </p>
+            <p style="margin:0 0; font-size:13px">
+              An administrator has created your account with Books That Grow. 
+            </p>
+            <p style="margin:0 0; font-size:13px">
+              You can log in to Books That Grow using the following information.
             </p>
             <p style="margin:15px 0; font-size:13px">
               <p style="margin:0 0; font-size:13px">
@@ -29,12 +38,8 @@
               </p>
             </p>
             <p style="margin:0 0; font-size:13px">
-			 To reset password click on following
-			 link: <a href = '<%= @link %>'>reset password</a>
+              To reset your password, click on the following link: <a href = '<%= @reset_pass_url %>'>reset password</a>
             </p>
-			<p style="margin:0 0; font-size:13px">
-			  To login to the site, just follow this link: <%= @url %>
-			</p>	
             <p style="margin:15px 0 0; font-size:13px">
               Thanks,
             </p>
@@ -56,5 +61,4 @@
   </table>
 </body>
 </html>
-
 
