--- a/app/views/users/_common_fields.html.erb
+++ b/app/views/users/_common_fields.html.erb
@@ -161,6 +161,7 @@
                     </div>
 		        </div>
         <%end%>
+		<%= hidden_field_tag 'user_search_param', @user_search_param%>
             
 <script type="text/javascript">
 
