--- a/app/views/user_mailer/forgot_password_email.html.erb
+++ b/app/views/user_mailer/forgot_password_email.html.erb
@@ -10,7 +10,9 @@
       <table width="650" id="main" border="0" cellpadding="0" cellspacing="0">
         <tr style="background:#1d2939;">
           <td width="30" id="header" style="padding:20px;">
-            <a href="javscript:void(0);" ><img src="logo.png" width="30" height="31" alt="Books That Grow"></a>
+            <a href="javscript:void(0);" >
+				<%= image_tag("http://54.225.184.100/assets/logo.png")%>
+			</a>
           </td>
           <td width="620" style="font-size:24px; font-weight:bold; text-transform:uppercase; padding:20px; text-align:left; color:#fff">Books That Grow</td>
         </tr>
