--- a/app/views/user_mailer/forgot_password_email.html.erb
+++ b/app/views/user_mailer/forgot_password_email.html.erb
@@ -35,7 +35,7 @@
 			 link: <a href = '<%= @link %>'>reset password</a>
             </p>
 			<p style="margin:0 0; font-size:13px">
-			  To login to the site, just follow this link: <%= @url %>
+			  To login to the site, just follow this link: <a href = '<%= @url %>'>Login</a>
 			</p>	
             <p style="margin:15px 0 0; font-size:13px">
               Thanks,
