Added school name title and quick access links

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -12,9 +12,9 @@
 .lbjs {
   float: left;
 }
-//.lbjs:last-of-type {
-//  margin-left: 20px;
-//}
+/*.lbjs:last-of-type {
+  margin-left: 20px;
+}*/
 .dynamic{width:85%;}
 
 .listbox-alig{float:left;width:170px;}
@@ -108,17 +108,17 @@ label.error {display:block;}
 .no-rec-found{text-align:center;}
 .lic-listing-width{width:100px !important;}
 
-// Quick edit css
+/* Quick edit css */
 .invisible{display:none;}
 .quick-edit:hover{border: solid 2px #ccc;padding: 5px;margin: -5px;cursor:pointer;}
 .quick-edit{padding:2px;}
 .dropdown-quick-edit:hover{border: solid 2px #ccc;padding: 5px;margin: -5px;cursor:pointer;}
 .dropdown-quick-edit{padding:2px;}
 .quick-edit-error-msg{text-align: center;margin: 37px auto 0;position: absolute !important;left: 0;right: 0;z-index: 10;}
-.diasble-arrors{color:black;background:#a1a1a1 !important;cursor:default !important;}
-.enable-arrors{color:#428bca;background:#e0e0e0 ;cursor:pointer !important;}
+.diasble-arrors{color:black;background:#e0e0e0 !important;cursor:default !important;}
+.enable-arrors{color:#428bca;background:rgba(112, 147, 216, 0.5) !important;cursor:pointer !important;}
 
-// All user search css
+/* All user search css */
 .all-user-search {margin-bottom: 40px !important;}
 .all-search-width {width:350px !important; margin-bottom: 20px;}
 
@@ -126,3 +126,10 @@ label.error {display:block;}
 .all-user-search-btn-margin{margin-top:30px;}
 .search-icon-align{vertical-align: top !important; padding: 7px 10px !important;}
 .search-box{width: 150px;height: 30px;padding: 6px 12px;font-size: 14px;line-height: 1.428571429;color: #555;background-color: #fff;border: 1px solid #ccc;border-radius: 4px;}
+
+/* Top school name header css*/
+.top-school-heading{color:#1D2939;text-align:center;font-size:20px !important;display: block;}
+.align-school-header{padding:20px 20px 9px !important;}
+hr.school-heading-hr{margin-top: 21px;}
+.mandatory-align{margin-top:-10px !important;color:#77818e;}
+.tab-links{float:right; display:block}
