--- a/app/views/classrooms/import.html.erb
+++ b/app/views/classrooms/import.html.erb
@@ -4,7 +4,7 @@
 			<table class="table" id="school_table">
 	            <thead>
 	                <tr>
-	                    <th>Classroom Code</th>
+	                    <th>Class Code</th>
 	                    <th>Name</th>
 						<th>Valid</th>
 						<th>Errors</th>
