--- a/app/views/classrooms/show.html.erb
+++ b/app/views/classrooms/show.html.erb
@@ -2,7 +2,7 @@
 	<div class="col-md-12">
     	<div class="panel panel-default">
         	<div class="panel-heading">
-            	<h4 class="panel-title">Classroom Details</h4>
+            	<h4 class="panel-title">Class Details</h4>
         	</div>
         	<div class="panel-body">
             	<address>
@@ -35,7 +35,7 @@
             	</address> -->
             	<div data-no-turbolink>
 			    	<%= link_to 'Edit', edit_classroom_path(@classroom, :school_id=>@classroom.school_id), :class=>"btn btn-success btn-xs", data: { disable_with: 'Saving...' } %>
-					<%= link_to 'Return to Classroom List', classrooms_path(:school_id=>@classroom.school_id), class: "btn btn-white btn-xs"%>
+					<%= link_to 'Return to Class List', classrooms_path(:school_id=>@classroom.school_id), class: "btn btn-white btn-xs"%>
         	    </div>
 		    </div>
         </div>
