--- a/app/views/user_mailer/user_details_changed.html.erb
+++ b/app/views/user_mailer/user_details_changed.html.erb
@@ -25,27 +25,24 @@
             <p style="margin:0 0; font-size:13px">
               An administrator has updated your Books That Grow account. 
             </p>
-            <p style="margin:0 0; font-size:13px">
-              You can log in to Books That Grow using the following information.
-            </p>
             <p style="margin:15px 0; font-size:13px">
               <p style="margin:0 0; font-size:13px">
                 Username: <%= @username %>
               </p>
               <p style="margin:0 0; font-size:13px">
-                Email Address: <%= @email %>
+                Email: <%= @email %>
               </p>
             </p> 
             <p style="margin:0 0; font-size:13px">
               To reset your password, click on the following link: <a href = '<%= @reset_pass_url %>'>reset password</a>
             </p>
-            <p style="margin:0 0; font-size:13px">
+            <p style="margin:15px 0; font-size:13px">
               If you believe this update was made in error, please immediately contact your school administrator.
             </p>
             <p style="margin:15px 0 0; font-size:13px">
               Thanks,
             </p>
-            <p style="margin:0 0; font-size:13px">
+            <p style="margin:15px 0; font-size:13px">
               The Books That Grow Team
             </p>
           </td>
