--- a/app/views/schools/_form.html.erb
+++ b/app/views/schools/_form.html.erb
@@ -64,7 +64,8 @@
 	                <div class="col-sm-6">
 	                    <div class="form-group">
 			    	        <%= f.label :country %><br />
-  							<%= f.country_select :country, {priority: %w(US)}, :disabled => true, :class=>"country-state-select" %>
+  							<%#= f.country_select :country, {priority: %w(US)}, :class=>"country-state-select", prompt: 'Please select a country' %>
+  							<%= f.country_select :country, priority: %w(US CA), prompt: 'Please select a country' %>
 	                    </div>
 	                </div>
 	                <div class="col-sm-6">
