--- a/app/views/schools/_subregion_select.html.erb
+++ b/app/views/schools/_subregion_select.html.erb
@@ -1,5 +1,5 @@
 <div id="school_state_wrapper">
-	<% params[:parent_region] = 'US'%>
+	<%#= params[:parent_region] = 'US'%>
   <% parent_region ||= params[:parent_region] %>
   <% country = Carmen::Country.coded(parent_region) %>
   <% if country.nil? %>
