--- a/app/views/schools/index.html.erb
+++ b/app/views/schools/index.html.erb
@@ -72,7 +72,7 @@
 							    <%=link_to '<i title="Student List" class="btg btg-student"></i>'.html_safe, users_path(:school_id=>school, :role_id=>@student.id)%> 
 							<%end%>
 							<% if can? :read, :classrooms %>
-							    <%= link_to '<i title="Classroom List" class="btg btg-classroom"></i>'.html_safe, classrooms_path(:school_id=>school)%> 
+							    <%= link_to '<i title="Class List" class="btg btg-classroom"></i>'.html_safe, classrooms_path(:school_id=>school)%> 
 						   <%end%>
 						<% if can? :read, :licenses %> 
 						    <!-- <button class="btn btn-primary btn-xs license_details" data-toggle="modal" data-target="#school_license_details" data-input='<%#=school.id%>' >
