--- a/app/views/schools/show.html.erb
+++ b/app/views/schools/show.html.erb
@@ -39,15 +39,24 @@
 			    	<%= @school.phone %>
             	</address>
             	<address>
+            		<% @total_school_licenses = 0%>
+					<% @total_schooladmin_licenses = 0%>
+					<% @total_teacher_licenses = 0%>
+					<% @total_student_licenses = 0%>
+					<% @total_school_used_licenses = 0%>
+					<% @total_school_un_used_licenses = 0%>
 	  	       	    <% unless @school.licenses.blank? %>
 	  		   		    <table class="table" id="lic_info_table">
 							<thead>
 								<tr>
 									<td><strong>License Batch Name</strong></td>
 									<td><strong>Expiration Date</strong></td>
-									<td><strong>Total No. of Licenses</strong></td>
+									<td><strong>Licenses allocated to School Admin</strong></td>
+									<td><strong>Licenses allocated to Teacher</strong></td>
+									<td><strong>Licenses allocated to Student</strong></td>
 									<td><strong>Licenses in Use</strong></td>
 									<td><strong>Unused Licenses</strong></td>
+									<td><strong>Total No. of Licenses</strong></td>
 								</tr>
 							</thead>
 							<tbody>	
@@ -55,16 +64,34 @@
 						            <tr>
 										<td><%= lic.license_batch_name unless lic.blank?%></td>
 										<td><%= lic.expiry_date.to_date unless lic.blank?%></td>
-	  					                <td><%= lic.no_of_licenses unless lic.blank?%></td>
-										<td><%= lic.used_liscenses unless lic.blank?%></td>
+										<td><%= lic.users.un_archived.school_admins.count %></td>
+					        			<td><%= lic.users.un_archived.teachers.count %></td>
+					        			<td><%= lic.users.un_archived.students.count %></td>
+	  					                <td><%= lic.used_liscenses unless lic.blank?%></td>
 										<td><%= (lic.no_of_licenses - lic.used_liscenses) unless lic.blank?%></td>
+										<td><%= lic.no_of_licenses unless lic.blank?%></td>
+										<% @total_school_licenses += lic.no_of_licenses  unless lic.blank?%>
+										<% @total_school_used_licenses += lic.used_liscenses  unless lic.blank?%>
+										<% @total_school_un_used_licenses += (lic.no_of_licenses - lic.used_liscenses) unless lic.blank?%>
+										<% @total_schooladmin_licenses += lic.users.un_archived.school_admins.count  unless lic.blank?%>
+										<% @total_teacher_licenses += lic.users.un_archived.teachers.count  unless lic.blank?%>
+										<% @total_student_licenses += lic.users.un_archived.students.count unless lic.blank?%>
 									</tr>
-								<%end%>		
+								<%end%>	
+								<tr class="total">
+										<td><strong>Total:</strong></td>
+										<td></td>
+										<td><%= @total_schooladmin_licenses%></td>
+										<td><%= @total_teacher_licenses%></td>
+										<td><%= @total_student_licenses%></td>
+										<td><%= @total_school_used_licenses%></td>
+										<td><%= @total_school_un_used_licenses%></td>
+										<td><%= @total_school_licenses%></td>
+									</tr>
 							</tbody>			
 	  					</table>
-	  				    
-	  	            <%end%>
-                </address>
+	  				<%end%>
+	  			</address>
 			    <div data-no-turbolink>
 			        <%= link_to 'Edit', edit_school_path(@school), class: "btn btn-primary btn-xs" %>
 			        <%#=if current_user.role.name.eql?('Web Admin')%>
