--- a/app/views/shared/_error_messages.html.erb
+++ b/app/views/shared/_error_messages.html.erb
@@ -1,11 +1,11 @@
 	<% if object.errors.any? %>
 	  <div id="error_explanation">
-	    <div class="alert alert-error">
+	    <div class="alert-form-error alert alert-error">
 	    The form contains <%= pluralize(object.errors.count, "error") %>.
 	    </div>
 	    <ul>
 	    <% object.errors.full_messages.each do |msg| %>
-	      <li>* <%= msg %></li>
+	      <li> <%= msg %></li>
 	    <% end %>
 	    </ul>
 	  </div>
