--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -438,14 +438,14 @@ a:focus {
     float:left;
     margin-left:50px;
     overflow:hidden;
-    text-align:left
+    text-align:left;
 }
 .current-reading h2 {
     display:block;
     font-size:20px;
     font-weight:bold;
     color:#444;
-    margin:0 0 30px 0
+    margin:0 0 30px 0;
 }
 .current-reading img {
     display:block;
@@ -458,7 +458,7 @@ a:focus {
 }
 .student-progress {
     width:70%;
-    float:right
+    float:right;
 }
 .add-book, .go-to-library {
     display:inline-block;
@@ -487,7 +487,7 @@ a:focus {
     margin:auto;
     height:180px;
     border-bottom:solid 2px #444;
-    text-align:center
+    text-align:center;
 }
 .progress-wrapper .progress-piller {
     position:absolute;
@@ -570,7 +570,7 @@ a:focus {
     height:25px;
     overflow:hidden
 }
-.students-list .student-progress ..progress-bar {
+.students-list .student-progress .progress-bar {
     line-height:25px
 }
 .students-list .student-progress span {
