--- a/app/views/users/reset_password.html.erb
+++ b/app/views/users/reset_password.html.erb
@@ -1,5 +1,5 @@
+<%if @a["a_type"].blank?%>
 <div class="col-md-7">
-	<%if @a["a_type"].blank?%>
     <div class="signin-info">
         <div class="logopanel">
             <!-- <h1><span>[</span> Books That Grow <span>]</span></h1> -->
@@ -16,10 +16,9 @@
                 </ul>
          <div class="mb20"></div>
    </div>
-   <%end%>
 </div>
 <div class="col-md-5">
-	<%= form_tag('/users/set_new_password', :method => "post", :id=>"reset_password_form", :class=>"form_validation") do %>
+	<%= form_tag('/users/set_new_password', :method => "post", :id=>"reset_password_form", :class=>"form_validation login ng-pristine ng-valid") do %>
 		<%= hidden_field_tag(:email_id, @email_id.blank? ? @a["email"] : @email_id)%>
 		<%= hidden_field_tag(:username, @a["username"])%>
 		<%= hidden_field_tag(:school_id, @a["school_id"])%>
@@ -36,6 +35,34 @@
 		
    <% end %>
 </div>
-
-
+<%else%>
+<div role="navigation" class="navbar navbar-inverse navbar-fixed-top">
+        <div class="container">
+            <div x-ng-if="pageAttr.showbackbtn" class="ng-scope">
+                <a class="back-btn" href="#/logout"></a>
+            </div>
+            <!-- end ngIf: pageAttr.showbackbtn -->
+            <div class="page-title ng-binding">Reset Password</div>
+        </div>
+    </div>
+	<%= form_tag('/users/set_new_password', :method => "post", :id=>"reset_password_form", :class=>"form_validation login ng-pristine ng-valid") do %>
+	    <%unless @user.blank?%><label>Reset password for <%=@user.first_name+" "+@user.last_name.to_s%>. </label><%end%>
+		<%= hidden_field_tag(:email_id, @email_id.blank? ? @a["email"] : @email_id)%>
+		<%= hidden_field_tag(:username, @a["username"])%>
+		<%= hidden_field_tag(:school_id, @a["school_id"])%>
+		<%= hidden_field_tag(:app_type, @a["a_type"])%>
+        <div>
+        	<div>
+				<%= password_field_tag 'password', nil, :class=>"", :required=>true, :placeholder => "Password" %><br/>
+            </div>
+            <div>
+				<%= password_field_tag 'password_confirmation',nil, :class=>"", :required=>true, :placeholder => "Password Confirmation" %>
+            </div>
+            <div>
+            	<%= submit_tag "Submit", class: "reset-password", data: { disable_with: 'Resetting...' }%>
+            </div>
+		</div>
+	<%end%>
+</div>
+<%end%>
 
